sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:4: error: not found: type boolean
	var swapped: boolean = true;
                     ^