sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {

	var swapped: boolean = true;
		for (i<-getNombreValeurs()-2 to 0 by -1){
			for(j<-0 to i){
				if(plusPetit(j+1,j)){
					echange(j,j+1)
					swapped = true
			
					
				
				}
					
			}
			if (!swapped){	
				return
			}
		}
}
		
	


